[package]
name = "parachain-node"
version = "0.1.0"
authors = ["Polytope Labs <hello@polytope.technology>"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/cumulus/"
edition = "2021"
build = "build.rs"

[dependencies]
futures = "0.3.30"
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4.17"
codec = { workspace = true }
serde = { version = "1.0.152", features = ["derive"] }
jsonrpsee = { workspace = true, features = ["server"] }
serde_json = "1.0"

sc-tracing = { workspace = true }
parachain-runtime = { path = "../runtime" }
sc-simnode = { workspace = true, features = ["parachain"] }
try-runtime-cli = { workspace = true, optional = true }

[dependencies.polkadot-sdk]
workspace = true
default-features = true
features = [
    "frame-system",
    "pallet-transaction-payment",
    "frame-benchmarking",
    "frame-benchmarking-cli",
    "pallet-transaction-payment-rpc",
    "sc-basic-authorship",
    "sc-chain-spec",
    "sc-cli",
    "sc-client-api",
    "sc-consensus",
    "sc-executor",
    "sc-network",
    "sc-offchain",
    "sc-network-sync",
    "sc-rpc",
    "sc-service",
    "sc-sysinfo",
    "sc-telemetry",
    "sc-transaction-pool",
    "sp-transaction-pool",
    "sc-transaction-pool-api",
    "sp-api",
    "sp-block-builder",
    "sp-blockchain",
    "sp-consensus-aura",
    "sp-core",
    "sp-io",
    "sp-keystore",
    "sp-runtime",
    "sp-timestamp",
    "substrate-frame-rpc-system",
    "substrate-prometheus-endpoint",
    "polkadot-cli",
    "polkadot-primitives",
    "staging-xcm",
    "cumulus-client-cli",
    "cumulus-client-consensus-aura",
    "cumulus-client-consensus-common",
    "cumulus-client-consensus-proposer",
    "cumulus-client-service",
    "cumulus-client-collator",
    "cumulus-primitives-core",
    "cumulus-primitives-parachain-inherent",
    "cumulus-relay-chain-interface",
]

[build-dependencies]
polkadot-sdk = { workspace = true, default-features = true, features = ["substrate-build-script-utils"] }

[features]
default = []
runtime-benchmarks = [
	"try-runtime-cli/try-runtime",
	"parachain-runtime/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"try-runtime-cli/try-runtime",
	"parachain-runtime/try-runtime"
]
