[package]
name = "parachain-runtime"
version = "0.1.0"
authors = ["Polytope Labs <hello@polytope.technology>"]
description = "A new Cumulus FRAME-based Substrate Runtime, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/cumulus/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
hex-literal = { version = "0.3.4", optional = true }
log = { version = "0.4.17", default-features = false }
smallvec = "1.10.0"
cumulus-pallet-parachain-system = { workspace = true }

# Local
simnode-runtime-api = { workspace = true }

[dependencies.polkadot-sdk]
workspace = true
features = [
    "frame-executive",
    "frame-support",
    "frame-system",
    "frame-system-rpc-runtime-api",
    "pallet-aura",
    "pallet-authorship",
    "pallet-balances",
    "pallet-session",
    "pallet-sudo",
    "pallet-timestamp",
    "pallet-message-queue",
    "pallet-transaction-payment",
    "pallet-transaction-payment-rpc-runtime-api",
    "sp-api",
    "sp-block-builder",
    "sp-consensus-aura",
    "sp-core",
    "sp-inherents",
    "sp-offchain",
    "sp-runtime",
    "sp-session",
    "sp-std",
    "sp-transaction-pool",
    "sp-version",
    "sp-genesis-builder",
    "pallet-xcm",
    "polkadot-parachain-primitives",
    "parachains-common",
    "polkadot-runtime-common",
    "staging-xcm",
    "staging-xcm-builder",
    "staging-xcm-executor",
    "cumulus-pallet-aura-ext",
    "cumulus-pallet-dmp-queue",
    "cumulus-pallet-parachain-system",
    "cumulus-pallet-session-benchmarking",
    "cumulus-pallet-xcm",
    "cumulus-pallet-xcmp-queue",
    "cumulus-primitives-core",
    "cumulus-primitives-aura",
    "cumulus-primitives-timestamp",
    "cumulus-primitives-utility",
    "pallet-collator-selection",
    "staging-parachain-info",
]

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"cumulus-pallet-parachain-system/std",
	"polkadot-sdk/std",
	"simnode-runtime-api/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
    "hex-literal",
    "polkadot-sdk/frame-system-benchmarking",
    "polkadot-sdk/frame-try-runtime",
    "polkadot-sdk/frame-benchmarking",
    "polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
    "polkadot-sdk/try-runtime",
]
